--- a/templates-admin/styles/ui.css
+++ b/templates-admin/styles/ui.css
@@ -157,7 +157,7 @@
 
 	.Inputfields textarea, 
 	.InputfieldMaxWidth {
-		width: 98%; 
+		width: 99%; 
 	}
 
 	.Inputfields .InputfieldStateToggle {
